--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   hi there,I'm <h1>Kailani</h1> from China.Nice to meeeeet you here！
   <p>I love reading novels,short ones especially,and a little bit poems.</p>
 
   Ciao!
+ 
+<p2>
+   <ul>
+    <li>easy-going</li>
+   </ul>
+   <ol>talk to me then!</ol>
+</p2>
 </body>
 </html>
